--- a/Vezba1/index.html
+++ b/Vezba1/index.html
@@ -76,11 +76,89 @@
       </table>
     </div>
     <!--4. Tabela-->
-    <!--5. Krug -->
+    <!--5. Krug so slika -->
     <div class="parent">
-      <div class="child"></div>
+      <div class="child">
+        <img src="/code-coffee.png" alt="code-coffee" />
+      </div>
     </div>
-    <!--5. Krug -->
+    <!--5. Krug so slika-->
+    <!--6.Forma-->
+    <div class="forma mt-3">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="movieTitle">Movie Title</label>
+            <input type="text" class="form-control" id="movieTitle" />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="genre">Genre</label>
+            <select class="form-control">
+              <option selected disabled>Choose a genre</option>
+              <option value="action">Action</option>
+              <option value="comedy">Comedy</option>
+              <option value="drama">Drama</option>
+              <option value="horror">Horror</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="director">Director</label>
+            <input type="text" class="form-control" id="director" />
+          </div>
+          <div class="form-group col-md-4">
+            <label for="writer">Writer</label>
+            <input type="text" class="form-control" id="writer" />
+          </div>
+          <div class="form-group col-md-4">
+            <label for="producer">Producer</label>
+            <input type="text" class="form-control" id="producer" />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="website">Website</label>
+            <input type="text" class="form-control" id="website" />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="yt-url">Youtube trailer URL</label>
+            <input type="text" class="form-control" id="yt-url" />
+          </div>
+        </div>
+        <label for="form-check">Rating</label>
+        <div class="form-row">
+          <div class="form-group">
+            <div class="form-check ml-2">
+              <input class="form-check-input" type="radio" />
+              <label class="form-check-label"> Terrible </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-check ml-2">
+              <input class="form-check-input" type="radio" />
+              <label class="form-check-label"> Watchable </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-check ml-2">
+              <input class="form-check-input" type="radio" />
+              <label class="form-check-label"> Best ever </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex">
+          <button type="submit" class="btn btn-danger">
+            Cancel <i class="fa fa-close"></i>
+          </button>
+          <button type="submit" class="btn btn-success ml-2">
+            Submit <i class="fa fa-check"></i>
+          </button>
+        </div>
+      </form>
+    </div>
+    <!--6.Forma-->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
